# NativeGlueActivity

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/android/glue/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/test/java/com/android/glue/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
